# CathayHackathon_25

./: .gitignore  README.md  docker-compose.yml
frontend/: .env.example  .gitignore  README.md  app copy.py  app.py  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
frontend/FlyVisionAaaS/: FlyVisionAaaS.py
frontend/FlyVisionAaaS/components/: s3_uploader.py
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Home.jsx  Navbar.jsx
frontend/templates/: index.html
frontend_flask/: app.py  pyproject.toml
frontend_flask/FlyVisionAaaS/: FlyVisionAaaS.py
frontend_flask/FlyVisionAaaS/components/: s3_uploader.py  screenshot.py
frontend_flask/static/components/: screenshot.py
frontend_flask/templates/: index.html
saas/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
saas/backend/: settings.py
saas/backend/S3/: S3.py  call_S3.py
saas/backend/api/: urls.py  views.py
